k8s/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
spec:
  selector:
    matchLabels:
      app: bot

  template:
    metadata:
      labels:
        app: bot

    spec:
      containers:
        - name: bot-container

          image: varenikvkusny/vacancies_collector:1.0

          command: ["python", "-m", "src.tg_bot.main_bot"]

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
