k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: vacancies-collector
spec:
  replicas: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker-container
          image: varenikvkusny/vacancies-collector:1.3
          command: ["python", "-m", "src.worker.main"]
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
