k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: vacancies-collector
spec:
  replicas: 2

  selector:
    matchLabels:
      app: app

  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-container
          image: varenikvkusny/vacancies-collector:1.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: vacancies-collector
spec:
  selector:
    app: app
  ports:
    - port: 8000
      targetPort: 8000
